--- a/train_decoder_config.json.example
+++ b/train_decoder_config.json.example
@@ -25,7 +25,8 @@
         "channels": 3,
         "timesteps": 1000,
         "loss_type": "l2",
-        "beta_schedule": "cosine"
+        "beta_schedule": "cosine",
+        "learned_variance": true
     },
     "data": {
         "webdataset_base_url": "pipe:s3cmd get s3://bucket/path/{}.tar -",
