Added the ability to train with resampling Moved config into the config folder and added a gitignore exclusion for example files

--- a/configs/train_decoder_config.json.example
+++ b/configs/train_decoder_config.json.example
@@ -42,6 +42,7 @@
             "test": 0.1
         },
         "shuffle_train": true,
+        "resample_train": false,
         "shuffle_val_test": false,
         "preprocessing": {
             "RandomResizedCrop": {
