Added the ability to configure which unets are being trained. Converted sampling datasets to use dedicated config to simplify sampling code.
Moved default configuration into its own file.

--- a/configs/train_decoder_config.json.example
+++ b/configs/train_decoder_config.json.example
@@ -8,19 +8,11 @@
             "dim_mults": [1, 2, 4, 8],
             "attn_dim_head": 32,
             "attn_heads": 16
-        },
-        {
-            "dim": 32,
-            "image_embed_dim": 768,
-            "cond_dim": 64,
-            "channels": 3,
-            "dim_mults": [1, 2, 4, 8, 16],
-            "attn_dim_head": 32,
-            "attn_heads": 16
         }
     ],
     "decoder": {
-        "image_sizes": [64, 128],
+        "image_sizes": [64],
+        "image_size": [64],
         "channels": 3,
         "timesteps": 1000,
         "loss_type": "l2",
@@ -31,7 +23,7 @@
         "webdataset_base_url": "pipe:s3cmd get s3://bucket/path/{}.tar -",
         "embeddings_url": "s3://bucket/embeddings/path/",
         "num_workers": 4,
-        "batch_size": 256,
+        "batch_size": 64,
         "start_shard": 0,
         "end_shard": 9999999,
         "shard_width": 6,
@@ -43,7 +35,6 @@
         },
         "shuffle_train": true,
         "resample_train": false,
-        "shuffle_val_test": false,
         "preprocessing": {
             "RandomResizedCrop": {
                 "size": [128, 128],
@@ -54,13 +45,13 @@
         }
     },
     "train": {
-        "epochs": 100,
+        "epochs": 20,
         "lr": 1e-4,
-        "wd": 0.1,
+        "wd": 0.01,
         "max_grad_norm": 0.5,
-        "save_every_n_samples": 250000,
+        "save_every_n_samples": 100000,
         "n_sample_images": 6,
-        "device": "cuda:7",
+        "device": "cuda:0",
         "epoch_samples": null,
         "validation_samples": null,
         "use_ema": true,
@@ -69,20 +60,23 @@
         "save_all": false,
         "save_latest": true,
         "save_best": true,
-        "base_path": "/absolute/path/to/model/folder"
+        "unet_training_mask": [true]
     },
-    "wandb": {
-        "entity": "",
-        "project": ""
-    },
-    "resume": {
-        "do_resume": false,
+    "tracker": {
+        "tracker_type": "console",
+        "data_path": "./models",
 
-        "from_wandb": true,
-        "wandb_run_path": "wandb/run/path",
-        "wandb_file_path": "latest.pth",
-        "wandb_resume": false,
-        
-        "filepath": ""
+        "wandb_entity": "",
+        "wandb_project": "",
+
+        "verbose": false
+    },
+    "load": {
+        "source": null,
+
+        "run_path": "",
+        "file_path": "",
+
+        "resume": false
     }
 }
