--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,7 @@
 # Configuration Files
 configs/*
 !configs/*.example
+!configs/*_defaults.py
 
 # Byte-compiled / optimized / DLL files
 __pycache__/
